// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestContainer allows passing no data message 1`] = `"no data"`;

exports[`RequestContainer allows rendering custom error component with extra props 1`] = `
<span>
  error
   
  extra
</span>
`;

exports[`RequestContainer allows rendering custom loading component with extra props 1`] = `
<span>
  loading... 
  extra
</span>
`;

exports[`RequestContainer renders children callback when data in not empty 1`] = `
<span>
  data
</span>
`;

exports[`RequestContainer renders children component when data in not empty 1`] = `
<span>
  data
</span>
`;

exports[`RequestContainer renders custom prop component with extra props 1`] = `
<span>
  data
   
  extra
</span>
`;

exports[`RequestContainer renders data even when pending is positive if showLoaderDuringRefetch is false 1`] = `"data"`;

exports[`RequestContainer renders null when custom isDataEmpty returns true 1`] = `null`;

exports[`RequestContainer renders null when data is empty array by default 1`] = `null`;

exports[`RequestContainer renders null when data is falsy by default 1`] = `null`;

exports[`RequestContainer renders null when error is truthy by default 1`] = `null`;

exports[`RequestContainer renders null when pending is positive by default 1`] = `null`;
